Fixes
Set #teibpToolbox to z-index: 99 because it was not inititally clickable, seemingly covered by another element. Also added more "top" positioning to #rvf361 to fix overlap in edited text view.

--- a/css/custom.css
+++ b/css/custom.css
@@ -365,6 +365,7 @@ choice expan {
   -moz-box-shadow:none;
   box-shadow:none;
   width: 15em;
+  z-index:99;
 }
 #teibpToolbox h1 {
   font-weight: normal;
