--- a/css/custom_norm.css
+++ b/css/custom_norm.css
@@ -20,7 +20,7 @@ ab[type = 'blockSubst'] > subst > del[type = 'erasure'] {
 /* rvf360 virtual stuff */
 #rvf361 {
   position:relative;
-  top:152em; 
+  top:162em; 
 }
 
 #rvf360 {display:none;}
